# article-crawler

./: .gitignore  README.md  article_crawler.code-workspace  docker-compose.yaml
backend/:  _typos.toml  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  app.py  config.py  gunicorn_config.py  pyproject.toml
backend/crates/libs/lib-core/: Cargo.toml
backend/crates/libs/lib-core/src/: common_schema.rs  error.rs  lib.rs
backend/crates/libs/lib-core/src/auth/: controller.rs  customer.rs  mod.rs  schema.rs
backend/crates/libs/lib-core/src/feed/: category_service.rs  link_service.rs  mod.rs  schema.rs  subscription_parse.rs  subscription_service.rs  subscription_update.rs
backend/crates/libs/lib-core/src/rss/: category_service.rs  link_service.rs  link_summary.rs  mod.rs  schema.rs  subscription_service.rs  subscription_update.rs
backend/crates/libs/lib-crawler/: Cargo.toml
backend/crates/libs/lib-crawler/src/: content.rs  lib.rs  rss.rs  url.rs
backend/crates/libs/lib-entity/: Cargo.toml
backend/crates/libs/lib-entity/src/: account.rs  account_token.rs  feed_build_config.rs  feed_build_record.rs  feed_category.rs  feed_link.rs  feed_link_summary.rs  feed_subscription.rs  feed_subscription_category_ref.rs  feed_subscription_link_ref.rs  lib.rs  rss_account.rs  rss_account_token.rs  rss_category.rs  rss_customer.rs  rss_link.rs  rss_link_mindmap.rs  rss_link_summary.rs  rss_links.rs  rss_links_subscriptions.rs  rss_subscrip_count_offset.rs  rss_subscrip_update_config.rs  rss_subscrip_update_record.rs  rss_subscription.rs  rss_subscription_build_record.rs  rss_subscription_category.rs  rss_subscription_config.rs  rss_subscription_link.rs  rss_subscriptions.rs  rss_subscriptions_category.rs
backend/crates/libs/lib-openai/: Cargo.toml
backend/crates/libs/lib-openai/src/: fn_define.rs  lib.rs  prompt.rs  schema.rs  summary.rs
backend/crates/libs/lib-utils/src/: settings.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231211_090712_add_link_meta_columns.rs  m20231219_094918_add_rss_subscrip_count_offset.rs  m20240110_065914_add_feed_link_summary.rs  m20240110_065914_add_rss_link_summary.rs  m20240130_083100_add_rss_link_pure_txt.rs  m20240218_030941_add_rss_index.rs  m20240221_025803_add_feed_update_record.rs  m20240221_025803_add_rss_update_record.rs  m20240227_070206_add_feed_update_config.rs  m20240227_070206_add_rss_update_config.rs  m20240320_030818_add_rss_tag_meta.rs  m20240402_033409_add_account_table.rs  m20240402_033409_add_user_table.rs  utils.rs
backend/crates/services/crawler/: Cargo.toml
backend/crates/services/crawler/src/: lib.rs  main.rs  remove_links.rs  schema.rs  utils.rs
backend/crates/services/web-server/: Cargo.toml
backend/crates/services/web-server/src/: api_error.rs  lib.rs  main.rs  response.rs  route.rs  utils.rs
backend/crates/services/web-server/src/account/: controller.rs
backend/crates/services/web-server/src/feed/: controller.rs  mod.rs
backend/crates/services/web-server/src/middlewares/: auth_claim.rs  jwt.rs  logger.rs  mod.rs  verification.rs
backend/crates/services/web-server/src/rss/: controller.rs  entities.rs
backend/extensions/: ext_celery.py  ext_database.py  ext_rest.py
backend/fixture/: config.toml  fix_json.py
backend/fixture/feed/categories/: 01.json  03.json  05.json  06.json
backend/fixture/feed/subscriptions/: 01.json  03.json
backend/fixture/rss/categories/: 02.json  04.json  07.json  08.json
backend/fixture/rss/feeds/: 02.json  04.json  05.json  06.json  07.json  08.json
backend/libs/: helper.py  password.py  schema.py  view_utils.py
backend/migrations/versions/: 9d59739f8edc_account_tables.py
backend/models/: feed_link.py  feed_subs_meta.py  feed_subs_update_record.py  feed_subscription.py
backend/services/rss/: controller.py  schema.py
backend/tests/: conftest.py  test_health.py  test_rss.py
backend/views/: __init__.py  welcome.py
docker/: docker-compose.yaml
docs/: 000-项目框架介绍.md  001-订阅源表设计.md  002-Web服务部署.md  003-构建二进制包.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(main)/: layout.tsx  loading.tsx
frontend/src/app/(main)/newest/: page.tsx
frontend/src/app/auth/: layout.tsx
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/newest/: layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  AppTitleContainer.tsx  Nav.tsx  ThemeTrigger.tsx  dashboard-nav.tsx  icons.tsx
frontend/src/components/layout/: mobile-sidebar.tsx  sidebar.tsx  user-nav.tsx
frontend/src/components/layout/ThemeToggle/: theme-toggle.tsx
frontend/src/components/ui/: heading.tsx
frontend/src/features/rss/: service.ts
frontend/src/features/rss/components/link-table/: cell-action.tsx  link-table.tsx
frontend/src/features/rss/components/subcription-table/: columns.tsx  subscription-table.tsx
frontend/src/lib/: auth.ts
frontend/src/providers/: Providers.tsx  session.tsx
frontend/src/types/: account.ts  index.ts  nav.ts  page.ts  rss.ts
frontend/src/utils/: api.ts  routes.ts  routes.tsx
js-server/: Dockerfile  app.js  package.json  pnpm-lock.yaml
python-server/: pyproject.toml
python-server/app/database/: __init__.py  feed_category.py  feed_link.py  feed_relationship.py  feed_subscription.py  feed_subscription_build_record.py  user.py
