[project]
name = "python-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "treee", email = "2332532718@qq.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.31",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
    "starlette>=0.37.2",
]
