[package]
name = "lib-entity"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]

# sea-orm
sea-orm = { version = "0", features = ["macros", "with-chrono", "with-uuid"] }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
sea-orm = { version = "0", features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "debug-print",
] }
