[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-core = { path = "../../libs/lib-core" }
lib-utils = { path = "../../libs/lib-utils" }
lib-entity = { path = "../../libs/lib-entity" }
lib-crawler = { path = "../../libs/lib-crawler" }

clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
num_cpus = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
